--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/2.create-a-tablegroup-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/2.create-a-tablegroup-of-mysql-mode.md
@@ -96,7 +96,7 @@ Query OK, 0 rows affected
 
 ### Range 分区和 Range Columns 分区
 
-Range 分区和 Range Columns 分区的一级分区表表组的创建方法类似，其分区键的要求与分区表的要求相同，Range 分区和 Range Columns 分区和分区键要求相关说明请参见 [创建表](3.create-a-table.md)。
+Range 分区和 Range Columns 分区的一级分区表表组的创建方法类似，其分区键的要求与分区表的要求相同，Range 分区和 Range Columns 分区和分区键要求相关说明请参见 [创建表](3.create-a-table-of-mysql-mode.md)。
 
 此外，在创建分区表表组时，无论是作为一级分区还是二级分区，均需要满足以下条件：
 
@@ -127,7 +127,7 @@ Query OK, 0 rows affected
 
 ## List 分区和 List Columns 分区
 
-List 分区和 List Columns 分区的一级分区表表组的创建方法类似，其分区键的要求与分区表的要求相同，List 分区和 List Columns 分区的分区键要求相关说明请参见 [创建表](3.create-a-table.md)。
+List 分区和 List Columns 分区的一级分区表表组的创建方法类似，其分区键的要求与分区表的要求相同，List 分区和 List Columns 分区的分区键要求相关说明请参见 [创建表](3.create-a-table-of-mysql-mode.md)。
 
 此外，在创建分区表表组时，无论是作为一级分区还是二级分区，均需要满足以下条件：
 
@@ -157,7 +157,7 @@ Query OK, 0 rows affected
 
 ### Hash 分区和 Key 分区
 
-Hash 分区和 Key 分区的一级分区表表组的创建方法类似，其分区键的要求与分区表的要求相同，Hash 分区和 Key 分区的分区键要求相关说明请参见 [创建表](3.create-a-table.md)。
+Hash 分区和 Key 分区的一级分区表表组的创建方法类似，其分区键的要求与分区表的要求相同，Hash 分区和 Key 分区的分区键要求相关说明请参见 [创建表](3.create-a-table-of-mysql-mode.md)。
 
 此外，在创建分区表表组时，无论是作为一级分区还是二级分区，均需要满足以下条件：
 
