--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
@@ -10,13 +10,13 @@
 
 * 非分区表只有一个分区。
 
-更多表的介绍及说明，请参见 [表概述](../../../7.reference/1.concepts-of-oceanbase-database-system/4.database-objects-1/1.oracle\2.table/1.table-overview.md)。
+更多表的介绍及说明，请参见 [表概述](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/2.table-of-oracle-mode/1.table-overview-of-oracle-mode.md)。
 
 ## 表创建准备
 
 在创建表前，您需要确认以下事项：
 
-* 请确认您已连接到数据库的 Oracle 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-for-oracle-mode/1.connection-mode-overview.md)。
+* 请确认您已连接到数据库的 Oracle 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
   >**说明**
   >
