--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/2.single-table-query-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/2.single-table-query-of-oracle-mode.md
@@ -226,5 +226,5 @@ obclient> SELECT empname, sal-100, LOWER(job) FROM emp;
 6 rows in set
 ```
 
-此外，指定列的查询还支持 `WHERE` 条件查询，请参见 [条件查询](04.condition-query.md)。
-更多用法请参见 [在查询中使用操作符和函数](09.Use-operators-and-functions-in-queries/01.use-arithmetic-operator-in-query.md)。
+此外，指定列的查询还支持 `WHERE` 条件查询，请参见 [条件查询](4.sort-query-of-oracle-mode.md)。
+更多用法请参见 [在查询中使用操作符和函数](9.execution-plan-of-oracle-mode/1.view-query-execution-plan-of-oracle-mode.md)。
