--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md
@@ -122,4 +122,4 @@ Bye
 
 ## 相关文档
 
-通过 OBClient 连接 OceanBase 数据库 MySQL 租户的操作示例请参见 [通过 OBClient 连接 OceanBase 租户](../../1.application-development-based-on-mysql-mode/1.database-connection/3.connect-to-an-oceanbase-tenant-by-using-obclient.md)。
+通过 OBClient 连接 OceanBase 数据库 MySQL 租户的操作示例请参见 [通过 OBClient 连接 OceanBase 租户](../1.database-connection-of-oracle-mode/3.connect-to-the-oceanbase-database-through-odc-of-oracle-mode.md)。
