--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
@@ -6,13 +6,13 @@
 
 在更新表数据前，请确认以下事项：
 
-* 请确认您已连接到数据库的 Oracle 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-for-oracle-mode/1.connection-mode-overview.md)。
+* 请确认您已连接到数据库的 Oracle 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
   >**说明**
   >
   >当前登录租户所属的租户模式可以由 `sys` 租户通过查询 `oceanbase.DBA_OB_TENANTS` 视图进行确认。
 
-* 请确认您已拥有待操作的表的 `DELETE` 权限。如果使用 `TRUNCATE TABLE` 语句清空表数据，则还需要拥有该表的 `CREATE` 权限。查看当前用户权限的相关操作请参见 [查看用户权限](7.reference/2.manage-guide/2.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/2.oracle-3/4.view-user-permissions.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](7.reference/2.manage-guide/2.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/2.oracle-3/5.modify-user-permissions-1.md)。
+* 请确认您已拥有待操作的表的 `DELETE` 权限。如果使用 `TRUNCATE TABLE` 语句清空表数据，则还需要拥有该表的 `CREATE` 权限。查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/4.view-user-permissions-of-oracle-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。
 
 ## 使用 DELETE 语句删除数据
 
