--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/10.use-sql-hint-in-query-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/10.use-sql-hint-in-query-of-oracle-mode.md
@@ -20,13 +20,13 @@ Hint 在语句注释中的语法格式如下：
 
    >**说明**
    >
-   >`READ_CONSISTENCY` Hint 仅仅是使当前查询可以进行弱一致性读，完全的读写分离还是要有路由等的支持。OceanBase 数据库的读写分离功能依赖 OBProxy 的 LDC 功能，如果需要使用读写分离功能，建议先进行 LDC 配置。有关读写分离的详细信息，请参见 [读写分离](../../../3.user-guide/5.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting-1.md)。
+   >`READ_CONSISTENCY` Hint 仅仅是使当前查询可以进行弱一致性读，完全的读写分离还是要有路由等的支持。OceanBase 数据库的读写分离功能依赖 OBProxy 的 LDC 功能，如果需要使用读写分离功能，建议先进行 LDC 配置。有关读写分离的详细信息，请参见 [读写分离](../../../7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting.md)。
 
 * `INDEX` Hint 指示优化器对指定的表使用索引扫描。
 
 * `QUERY_TIMEOUT` Hint 指示服务器设定某条 SQL 执行时的超时时间，单位是 us。
 
-有关其他常用 SQL Hints 的详细信息，请参考 [注释](../../6.sql-syntax/3.common-tenant-oracle-mode/3.basic-elements-1/6.annotation-1/1.annotation-overview.md) 章节。
+有关其他常用 SQL Hints 的详细信息，请参考 [注释](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/6.annotation-of-oracle-mode/1.annotation-overview-of-oracle-mode.md) 章节。
 
 ## 使用 SQL Hint
 
