--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
@@ -6,7 +6,7 @@
 
 数据库事务包含了数据库上的一系列操作，事务使得数据库从一个一致的状态转化到另一个一致的状态。通常事务中的 SQL 会包含 DML 语句，也会包含查询语句。如果一个事务中的 SQL 只有查询语句，这个事务通常称为只读事务。
 
-事务在没有提交之前，可以使用 `ROLLBACK` 命令回滚事务。更多事务相关的说明，请参考 [事务简介](../../7.reference/1.concepts-of-oceanbase-database-system/8.transaction-management-1/1.transaction-2/1.transaction-introduction.md)。
+事务在没有提交之前，可以使用 `ROLLBACK` 命令回滚事务。更多事务相关的说明，请参考 [事务简介](../../../7.reference/1.oceanbase-database-concepts/8.transaction-management/1.transaction/1.transaction-introduction.md)。
 
 ## 事务控制语句
 
@@ -38,8 +38,8 @@
 
 * [开启事务](2.start-a-transaction-of-oracle-mode.md)
 
-* [事务保存点](3.transaction-savepoints-of-oracle/1.mark-a-savepoint.md)
+* [事务保存点](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md)
 
-* [提交事务](4.submit-transaction.md)
+* [提交事务](4.submit-transaction-of-oracle-mode.md)
 
-* [回滚事务](5.roll-back-transactions.md)
+* [回滚事务](5.roll-back-transactions-of-oracle-mode.md)
