--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/2.start-a-transaction-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/2.start-a-transaction-of-oracle-mode.md
@@ -48,7 +48,7 @@ OceanBase 数据库 Oracle 模式的事务控制语句与 Oracle 数据库兼容
 
 当事务开启时，OceanBase 数据库为事务分配一个事务 ID，用于唯一的标识一个事务。
 
-在实际使用中，多个并发的连接下，对同一个数据表进行操作时，可能会出现两个事务对同一行数据进行操作。对于查询的读操作，可以通过 `SELECT FOR UPDATE` 语句锁定查询结果，避免其他 DML 语句对该笔记录进行同时修改。`SELECT FOR UPDATE` 语句的详细使用方法，请参见 [锁定查询结果 SELECT FOR UPDATE](4.read-data-for-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/10.lock-query-result-select-for-update.md)。
+在实际使用中，多个并发的连接下，对同一个数据表进行操作时，可能会出现两个事务对同一行数据进行操作。对于查询的读操作，可以通过 `SELECT FOR UPDATE` 语句锁定查询结果，避免其他 DML 语句对该笔记录进行同时修改。`SELECT FOR UPDATE` 语句的详细使用方法，请参见 [锁定查询结果 SELECT FOR UPDATE](../4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-of-oracle-mode/10.lock-query-result-select-for-update-of-oracle-mode.md)。
 
 以下示例先通过 `SET autocommit=0` 关闭自动提交功能，再通过 `UPDATE` 语句开启一个事务。
 
@@ -107,12 +107,12 @@ FLUSHED_LOG_SIZE: 0
 1 row in set
 ```
 
-视图 `$OB_TRANSACTION_PARTICIPANTS` 中的字段及详细说明请参见 [$OB_TRANSACTION_PARTICIPANTS](../../7.reference/2.manage-guide/8.system-reference/5.system-view-for-oracle/3.performance-view-6/49.v-ob_transaction_participants-1.md)。
+视图 `$OB_TRANSACTION_PARTICIPANTS` 中的字段及详细说明请参见 [$OB_TRANSACTION_PARTICIPANTS](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/49.v-ob_transaction_participants-of-oracle-mode.md)。
 
 ## 相关文档
 
-* [事务保存点](3.transaction-savepoints-of-oracle/1.mark-a-savepoint.md)
+* [事务保存点](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md)
 
-* [提交事务](4.submit-transaction.md)
+* [提交事务](4.submit-transaction-of-oracle-mode.md)
 
-* [回滚事务](5.roll-back-transactions.md)
+* [回滚事务](5.roll-back-transactions-of-oracle-mode.md)
