--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/3.create-a-index-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/3.create-a-index-of-oracle-mode.md
@@ -12,7 +12,7 @@
 
 * 非唯一索引可能存在完全相同的值。
 
-关于唯一索引和非唯一索引的更多介绍，请参见 [唯一索引和非唯一索引](../../../7.reference/1.concepts-of-oceanbase-database-system/4.database-objects-1/1.oracle/3.index/3.unique-and-non-unique-indexes.md)。
+关于唯一索引和非唯一索引的更多介绍，请参见 [唯一索引和非唯一索引](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/3.index-of-oracle-mode/3.unique-and-non-unique-indexes-of-oracle-mode.md)。
 
 对于分区表，索引还可以分为局部索引和全局索引：
 
@@ -20,7 +20,7 @@
 
 * 全局索引的分区规则与表分区相互独立，因此索引表中一个分区的索引值可能对应着主表的多个分区内的数据。
 
-关于局部索引和全局索引的更多介绍，请参见 [局部索引和全局索引](../../../7.reference/1.concepts-of-oceanbase-database-system/4.database-objects-1/1.oracle/3.index/2.local-and-global-indexes.md)。
+关于局部索引和全局索引的更多介绍，请参见 [局部索引和全局索引](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/3.index-of-oracle-mode/2.local-and-global-indexes-of-oracle-mode.md)。
 
 ## 索引创建准备
 
@@ -34,7 +34,7 @@
 
 * 请确认您已拥有 `INDEX` 权限以及待添加索引的表的 `ALTER` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/4.view-user-permissions-of-oracle-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。
 
-* 请确认已创建表，创建表的操作请参见 [创建表](3.create-a-index-of-oracle-mode.md)。
+* 请确认已创建表，创建表的操作请参见 [创建表](2.create-a-table-of-oracle-mode.md)。
 
 ## 索引创建建议
 
