--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
@@ -16,7 +16,7 @@
 
 ## 使用 DELETE 语句删除数据
 
-通常使用 [DELETE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/1.DELETE-1.md) 语句来删除表中的部分数据或全部数据。
+通常使用 [DELETE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/1.delete-of-oracle-mode.md) 语句来删除表中的部分数据或全部数据。
 
 简单的 `DELETE` 语句格式如下：
 
@@ -101,7 +101,7 @@ TRUNCATE [TABLE] table_name;
 obclient> TRUNCATE TABLE t_insert;
 ```
 
-更多 `TRUNCATE TABLE` 语句的使用及说明请参见 [TRUNCATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/45.truncate-table-1.md)。
+更多 `TRUNCATE TABLE` 语句的使用及说明请参见 [TRUNCATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/45.truncate-table-of-oracle-mode.md)。
 
 ## 相关文档
 
