--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/5.user-password-error-with-error-code-1045-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/5.user-password-error-with-error-code-1045-of-oracle-mode.md
@@ -45,7 +45,7 @@ ERROR 1045 (42000): Access denied for user 'NY'@'xxx.xxx.xxx.xxx' (using passwor
 
    >**说明**
    >
-   >为用户设置密码时，用户密码需要符合当前租户的密码复杂度。密码复杂度相关操作及说明请参见 [设置密码复杂度](../../../7.reference/2.manage-guide/2.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/2.oracle-3/2.set-password-complexity.md)。
+   >为用户设置密码时，用户密码需要符合当前租户的密码复杂度。密码复杂度相关操作及说明请参见 [设置密码复杂度](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/2.set-password-complexity-of-oracle-mode.md)。
 
 3. 再次使用 `ny` 用户登录。
 
