--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
@@ -22,11 +22,11 @@
   >
   >当前登录租户所属的租户模式可以由 `sys` 租户通过查询 `oceanbase.DBA_OB_TENANTS` 视图进行确认。
 
-* 请确认您已拥有 `CREATE TABLE` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](7.reference\2.manage-guide\2.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\2.oracle-3\4.view-user-permissions.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](7.reference\2.manage-guide\2.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\2.oracle-3\5.modify-user-permissions-1.md)。
+* 请确认您已拥有 `CREATE TABLE` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/4.view-user-permissions-of-oracle-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。
 
 ## 创建表
 
-请使用 [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/24.create-table-1.md) 语句创建表，并参考以下内容完成表的创建。
+请使用 [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 语句创建表，并参考以下内容完成表的创建。
 
 ### 定义表名
 
@@ -51,7 +51,7 @@ Query OK, 0 rows affected
 
 * 根据数据类型的特点，为待存储在列中的数据选择合适的数据类型。
 
-* OceanBase 数据库 Oracle 模式中支持的数据类型及详细介绍请参见 [数据类型概述](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/3.basic-elements-1/1.built-in-data-types/1.overview-of-built-in-data-types.md)。
+* OceanBase 数据库 Oracle 模式中支持的数据类型及详细介绍请参见 [数据类型概述](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md)。
 
 * 对于字符串数据，建议使用变长字符串数据类型，并指定最大长度。请确保指定的最大长度大于需要存储的最大字符数，避免超出最大长度时出现字符截断现象。
 
@@ -67,13 +67,13 @@ Query OK, 0 rows affected
 
 创建有主键的表后，系统会自动为主键列创建一个全局唯一索引，您可以通过主键快速定位到行。
 
-要指定某一列为主键列，请在该列的定义后添加 `PRIMARY KEY` 关键字。如果要在多列上定义主键约束，请在 [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/24.create-table-1.md) 语句中所有列的列表之后再添加主键约束的定义。
+要指定某一列为主键列，请在该列的定义后添加 `PRIMARY KEY` 关键字。如果要在多列上定义主键约束，请在 [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 语句中所有列的列表之后再添加主键约束的定义。
 
 以下是定义主键列时需要遵循的要求：
 
 * 建议为表定义一个主键，每个数据库表最多拥有一个主键列集合。
 
-  在 OceanBase ​数据库中，不强制用户为表定义主键，但使用主键可以使表内的每行数据被唯一确定，且不存在重复的数据行。如果没有合适的字段作为主键，您可以为表增加一个数值列作为主键，并使用 Oracle 租户的序列为该列填充值。有关序列的详细说明请参见 [序列](7.reference\2.manage-guide\3.database-object-management-1\1.oracle-4\5.management-sequence-1.md)。
+  在 OceanBase ​数据库中，不强制用户为表定义主键，但使用主键可以使表内的每行数据被唯一确定，且不存在重复的数据行。如果没有合适的字段作为主键，您可以为表增加一个数值列作为主键，并使用 Oracle 租户的序列为该列填充值。有关序列的详细说明请参见 [序列](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/5.management-sequence-of-oracle-mode.md)。
 
   此外，如果在创建时未定义主键列， OceanBase 数据库支持为已存在的表添加主键列。
 
@@ -85,7 +85,7 @@ Query OK, 0 rows affected
 
 * 在多列上定义主键约束时，建议明确标识主键约束的名称。例如，主键约束命名为 “PK_xxx”。
 
-更多主键约束相关的介绍，请参见 [主键约束](./../../../7.reference/1.concepts-of-oceanbase-database-system/4.database-objects-1/1.oracle/8.data-integrity/2.integrity-constraint-type/4.primary-key-constraint.md)。
+更多主键约束相关的介绍，请参见 [主键约束](./../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/8.data-integrity-of-oracle-mode/2.integrity-constraint-type-of-oracle-mode/4.primary-key-constraint-of-oracle-mode.md)。
 
 示例 2：在多列上定义主键约束。
 
@@ -105,7 +105,7 @@ obclient [SYS]> desc ordr;
 
 示例 2 中，定义了 c1、c2 列为主键列，且约束名称为 PK_c1_c2。 c1、c2 列的值不允许为 NULL 并且必须是不重复的。
 
-定义主键列后，支持更改主键列和删除主键，更多主键约束相关的操作请参见 [定义列的约束类型](7.reference\2.manage-guide\3.database-object-management-1\1.oracle-4\1.manage-tables-1\4.define-the-constraint-type-for-a-column-1.md)。
+定义主键列后，支持更改主键列和删除主键，更多主键约束相关的操作请参见 [定义列的约束类型](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/4.define-the-constraint-type-for-a-column-of-oracle-mode.md)。
 
 ### 定义其他列约束
 
@@ -123,7 +123,7 @@ obclient [SYS]> desc ordr;
 
   创建外键约束时，如果不指定外键名，系统会自动分配一个约束名，自动分配的约束名为 `表名_OBFK_创建时间戳`。例如，`t1_OBFK_1627747200000000`。
 
-  OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。`foreign_key_checks` 变量的更多说明，请参见 [foreign_key_checks](../../../7.reference/5.system-reference/3.system-variable-for-oracle/27.foreign_key_checks-1-2-3-4.md)。
+  OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。`foreign_key_checks` 变量的更多说明，请参见 [foreign_key_checks](../../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/27.foreign_key_checks-of-oracle-mode.md)。
   
 * `CHECK` 约束：要求数据库中某列的值符合指定的条件。
 
@@ -131,7 +131,7 @@ obclient [SYS]> desc ordr;
 
   创建 `CHECK` 约束时，如果未指定约束名称，系统会自动分配一个约束名，自动分配的约束名为 `表名_OBCHECK_创建时间戳`，例如，`t1_OBCHECK_1629350823880271`。
 
-要约束单个列，请在该列的定义中添加一个约束关键字，如果要约束多个列，请在 [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/24.create-table-1.md) 语句中所有列的列表之后再添加整个约束的定义。
+要约束单个列，请在该列的定义中添加一个约束关键字，如果要约束多个列，请在 [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 语句中所有列的列表之后再添加整个约束的定义。
 
 以下是定义其他列约束时需要遵循的要求：
 
@@ -355,7 +355,7 @@ Query OK, 0 rows affected
 
 Range 分区、List 分区、 Hash 分区均可以作为组合分区表的二级分区策略。在 OceanBase 数据库中，二级分区表还包括模板化二级分区表和非模板化二级分区表。
 
-下面通过几个简单示例，简单介绍二级分区表的创建方法。本文仅提供部分建表示例，分区表的详细示例请参见 [管理分区](../../../7.reference/2.manage-guide/4.distributed-storage-management/2.manage-partition-table/1.oracle-1/2.create-a-partition-table-2.md)。
+下面通过几个简单示例，简单介绍二级分区表的创建方法。本文仅提供部分建表示例，分区表的详细示例请参见 [管理分区](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/2.create-a-partition-table-of-oracle-mode.md)。
 
 示例 10：创建 Range + List 分区的模板化二级分区表。
 
@@ -459,4 +459,4 @@ Query OK, 0 rows affected
 
 * [创建索引](3.create-a-index.md)
 
-* [管理分区](../../../7.reference/2.manage-guide/4.distributed-storage-management/2.manage-partition-table/1.oracle-1/2.create-a-partition-table-2.md)
+* [管理分区](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/1.partition-overview-of-oracle-mode.md)
