--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/8.unique-key-conflict-with-error-code-ora-00001-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/8.unique-key-conflict-with-error-code-ora-00001-of-oracle-mode.md
@@ -19,7 +19,7 @@ ORA-00001: unique constraint '3' for key 'PRIMARY' violated
 
 * SQLSTATE：23000
 
-关于错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/5.system-reference/7.error-code-for-oracle/1.use-error-information.md)。
+关于错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md)。
 
 ## 可能原因
 
@@ -53,8 +53,8 @@ ORA-00001: unique constraint '3' for key 'PRIMARY' violated
 
    >**说明**
    >
-   >* 您也可以通过 `MERGE INTO` 语句来避免唯一键冲突。详细操作步骤，请参见 [替换数据](../3.write-data-for-oracle-mode/4.replace-data-of-oracle-mode.md)。
-   >* 如果确定不需要保留已存在的行，可以根据条件将不需要的行删除。具体操作请参见 [删除数据](../3.write-data-for-oracle-mode/3.delete-data-of-oracle-mode.md)。
+   >* 您也可以通过 `MERGE INTO` 语句来避免唯一键冲突。详细操作步骤，请参见 [替换数据](../3.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md)。
+   >* 如果确定不需要保留已存在的行，可以根据条件将不需要的行删除。具体操作请参见 [删除数据](../3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md)。
 
 3. 操作成功后，再次查看 `t_insert` 表中的数据。
 
