--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md
@@ -42,4 +42,4 @@ Query OK, 0 rows affected
 
 ## 相关文档
 
-* [回滚事务到某个保存点](2.rollback-to-a-savepoint.md)
+* [回滚事务到某个保存点](2.rollback-to-a-savepoint-of-oracle-mode.md)
