--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/3.transaction-savepoints-of-oracle-mode/2.rollback-to-a-savepoint-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/3.transaction-savepoints-of-oracle-mode/2.rollback-to-a-savepoint-of-oracle-mode.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-请确认已标记保存点，具体操作请参见 [标记保存点](1.mark-a-savepoint.md)。
+请确认已标记保存点，具体操作请参见 [标记保存点](1.mark-a-savepoint-of-oracle-mode.md)。
 
 ## 回滚事务到保存点
 
@@ -117,4 +117,4 @@ ROLLBACK TO SAVEPOINT pointname;
    5 rows in set
    ```
 
-更多回滚事务相的示例及说明，请参见 [回滚事务](../5.roll-back-transactions.md)
+更多回滚事务相的示例及说明，请参见 [回滚事务](../5.roll-back-transactions-of-oracle-mode.md)
