--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
@@ -274,7 +274,7 @@ Query OK, 1 row affected
 
 示例 6 中，由于 `col1` 列添加了 `CHECK` 约束，后续插入列 `col1` 的值不大于 `10` 时就会报错。
 
-定义其他列约束的详细操作请参见 [定义列的约束类型](7.reference\2.manage-guide\3.database-object-management-1\1.oracle-4\1.manage-tables-1\4.define-the-constraint-type-for-a-column-1.md)。
+定义其他列约束的详细操作请参见 [定义列的约束类型](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/4.define-the-constraint-type-for-a-column-of-oracle-mode.md)。
 
 ### 选择分区方案
 
@@ -282,7 +282,7 @@ Query OK, 1 row affected
 
 在 OceanBase 数据库的 Oracle 模式中，按照分区策略，分区表可以分为 Range 分区、List 分区、 Hash 分区和组合分区。按照分区维度，分区表可以分为一级分区和二级分区，二级分区是一级分区的二次拆分，因此一级分区表有一个分区键，二级分区表有两个分区键，并且两次拆分的策略可以不一样。
 
-关于分区相关的更多介绍，请参见 [分区](../../../7.reference/1.concepts-of-oceanbase-database-system/4.database-objects-1/1.oracle/4.partition/1.partition-overview-3.md)。
+关于分区相关的更多介绍，请参见 [分区](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/4.partition-of-oracle-mode/1.partition-overview-of-oracle-mode.md)。
 
 **Range 分区**
 
@@ -457,6 +457,6 @@ Query OK, 0 rows affected
 
 ## 后续处理
 
-* [创建索引](3.create-a-index.md)
+* [创建索引](3.create-a-index-of-oracle-mode.md)
 
 * [管理分区](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/1.partition-overview-of-oracle-mode.md)
