合并文档链接更新

--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/1.overview-of-obproxy-management.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/1.overview-of-obproxy-management.md
@@ -20,7 +20,7 @@ OceanBase 数据库与传统单机数据库不同，OceanBase 数据库是分布
 
 每个 OBServer 均包含完整的 SQL 引擎和存储引擎，用来负责解析用户 SQL 以生成物理执行计划并执行。分布式的 OBServer 之间通过 Paxos 协议以保证高可用性。这种架构设计中，OBProxy 只承担基本的路由和容灾功能，而数据库的功能全部交由 OBServer 实现。这样更加简单明确的分工可以将各组件性能做得更加极致，OceanBase 数据库整体最高也能做到近似访问单机数据库的性能。
 
-OBProxy 支持将请求正确发送至主副本，并且通过特定配置还支持读写分离和备优先读等场景。另外在 OBServer 节点发生宕机、升级或合并等状态时，可以通过 [黑名单机制](../7.route-management/4.odp-routing-policy/3.blacklist-mechanism-1.md) 确保用户请求可以被路由至状态正常的 OBServer 上。
+OBProxy 支持将请求正确发送至主副本，并且通过特定配置还支持读写分离和备优先读等场景。另外在 OBServer 节点发生宕机、升级或合并等状态时，可以通过 [黑名单机制](../7.route-management/4.odp-routing-policy/3.blacklist-mechanism.md) 确保用户请求可以被路由至状态正常的 OBServer 上。
 
 ## 管理 OBProxy
 
@@ -31,14 +31,14 @@ OCP 为 OBProxy 提供以下管理功能。
 | [创建 OBProxy 集群](2.manage-obproxy-clusters/1.create-an-obproxy-cluster.md)             | 您可通过该操作创建 OBProxy 集群。                            |
 | [OBProxy 参数说明](4.odp-cluster-parameters.md)            | 您可通过该操作管理 OBProxy 集群的参数。                         |
 | [删除 OBProxy 集群](2.manage-obproxy-clusters/3.delete-obproxy-cluster.md)             | 您可通过该操作删除 OBProxy 集群。                            |
-| [升级 OBProxy 集群下全部 OBProxy](2.manage-obproxy-clusters/4.upgrade-obproxy-all-obproxy-in-the-cluster.md)  | 您可通过该操作升级 OBProxy 集群中所有的 OBProxy。                |
-| [重启 OBProxy 集群下的全部 OBProxy](2.manage-obproxy-clusters/5.restarts-all-obproxy-nodes-in-a-obproxy-cluster.md) | 您可通过该操作重启 OBProxy 集群下全部 OBProxy。                 |
-| [管理 OBProxy 连接的 OB 集群](2.manage-obproxy-clusters/6.ob-cluster-that-manages-obproxy-connections.md)      | 您可通过 OCP 为 OBProxy 添加可连接的 OB 集群或删除已连接的 OB 集群。    |
-| [OBProxy 集群性能监控](2.manage-obproxy-clusters/7.obproxy-cluster-performance-monitoring.md)            | 您可以在 OCP 上查看 OBProxy 集群的性能监控信息，包括了服务监控信息和系统监控信息。 |
-| [添加 OBProxy](3.obproxy-management-2/1.add-obproxy-1.md)                | 您可通过该操作向 OBProxy 集群中添加 OBProxy。                  |
-|[启动 OBProxy](3.obproxy-management-2/2.start-obproxy.md)|您可通过该操作启动 OBProxy。|
-| [刷新 OBProxy 配置](3.obproxy-management-2/3.refresh-obproxy-configuration.md)             | 您可通过该操作刷新 OBProxy 的配置。                           |
-|[停止 OBProxy](3.obproxy-management-2/4.stop-obproxy.md)|您可通过该操作停止 OBProxy。 |
-| [删除 OBProxy](3.obproxy-management-2/6.delete-obproxy-1.md)                | 您可通过该操作删除集群中的 OBProxy。                           |
-| [重启 OBProxy](3.obproxy-management-2/5.restart-obproxy-1.md)                | 您可通过该操作重启集群中的 OBProxy。                           |
-| [升级 OBProxy](3.obproxy-management-2/7.upgrade-obproxy-1.md)                | 您可通过该操作升级集群中的 OBProxy。                           |
+| [升级 OBProxy 集群下全部 OBProxy](2.manage-obproxy-clusters/4.upgrade-all-obproxy-in-obproxy-cluster.md)  | 您可通过该操作升级 OBProxy 集群中所有的 OBProxy。                |
+| [重启 OBProxy 集群下的全部 OBProxy](2.manage-obproxy-clusters/5.restart-all-obproxy-nodes-in-obproxy-cluster.md) | 您可通过该操作重启 OBProxy 集群下全部 OBProxy。                 |
+| [管理 OBProxy 连接的 OB 集群](2.manage-obproxy-clusters/6.manage-ob-cluster-in-obproxy.md)      | 您可通过 OCP 为 OBProxy 添加可连接的 OB 集群或删除已连接的 OB 集群。    |
+| [OBProxy 集群性能监控](2.manage-obproxy-clusters/7.performance-monitoring-of-obproxy-cluster.md)            | 您可以在 OCP 上查看 OBProxy 集群的性能监控信息，包括了服务监控信息和系统监控信息。 |
+| [添加 OBProxy](3.manage-obproxy/1.add-obproxy.md)                | 您可通过该操作向 OBProxy 集群中添加 OBProxy。                  |
+|[启动 OBProxy](3.manage-obproxy/2.start-obproxy.md)|您可通过该操作启动 OBProxy。|
+| [刷新 OBProxy 配置](3.manage-obproxy/3.refresh-obproxy-configuration.md)             | 您可通过该操作刷新 OBProxy 的配置。                           |
+|[停止 OBProxy](3.manage-obproxy/4.stop-obproxy.md)|您可通过该操作停止 OBProxy。 |
+| [删除 OBProxy](3.manage-obproxy/6.delete-obproxy.md)                | 您可通过该操作删除集群中的 OBProxy。                           |
+| [重启 OBProxy](3.manage-obproxy/5.restart-obproxy.md)                | 您可通过该操作重启集群中的 OBProxy。                           |
+| [升级 OBProxy](3.manage-obproxy/7.upgrade-obproxy.md)                | 您可通过该操作升级集群中的 OBProxy。                           |
