--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/2.start-obproxy.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/2.start-obproxy.md
@@ -4,7 +4,7 @@ OBProxy 部署成功后，可以通过命令启动单个 obproxy 进程。
 
 ## 前提条件
 
-请确认已部署 OBProxy，部署 OBProxy 的具体操作请参见 [部署 OBProxy](../../../../4.deploy-the-oceanbase-database/6.command-line-deployment/4.deploy-obproxy-4/1.deploy-obproxy-by-using-command-lines.md)。
+请确认已部署 OBProxy，部署 OBProxy 的具体操作请参见 [部署 OBProxy](../../../../../4.deploy-oceanbase/4.deploy/6.command-line-deployment/4.deploy-obproxy-4/1.deploy-obproxy-by-using-command-lines.md)。
 
 ## 背景信息
 
