--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/1.odp-table-routing.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/1.odp-table-routing.md
@@ -41,7 +41,7 @@ OBProxy 如果计算不出分区 ID，那么就无法拉取准确的路由。可
 [2021-10-28 17:18:31.045191] INFO  [PROXY] ob_mysql_route.cpp:575 [73979][Y0-7FB3C9D07A80] [lt=17] [dc=0] fail to calculate partition id, just use tenant server(tmp_ret=-4002)
 ```
 
-有关分区表的相关介绍，请参见 [管理分区](../../8.distributed-storage-management/2.manage-partition-table/1.oracle-1/1.partition-overview-5.md)。
+有关分区表的相关介绍，请参见 [管理分区](../../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/1.partition-overview-of-mysql-mode.md)。
 
 ## ODP 依赖的 OBServer 内部表
 
