--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/1.create-a-database-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/1.create-a-database-of-mysql-mode.md
@@ -29,5 +29,5 @@
   Query OK, 1 row affected (0.03 sec)
   ```
 
-  更多 `CREATE DATABASE` 语句相关的语法说明请参见 [CREATE DATABASE](../../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/11.create-database.md)。
+  更多 `CREATE DATABASE` 语句相关的语法说明请参见 [CREATE DATABASE](../../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/11.create-database-of-mysql-mode.md)。
   
