--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/2.create-a-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/2.create-a-table-of-mysql-mode.md
@@ -2,7 +2,7 @@
 
 您可以使用 `CREATE TABLE` 语句来创建表。
 
-本节主要介绍非分区表的创建，分区表的创建及使用请参见 [创建分区表](../../../8.distributed-storage-management/2.manage-partition-table/2.mysql-1/2.create-a-partition-table.md)。
+本节主要介绍非分区表的创建，分区表的创建及使用请参见 [创建分区表](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/2.create-a-partition-table-of-mysql-mode.md)。
 
 ## 创建非分区表
 
