--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/1.about-tables-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/1.about-tables-of-oracle-mode.md
@@ -8,6 +8,6 @@
 
 * 为表的每个列选择合适的 SQL 数据类型。
 
-  有关 SQL 数据类型的详细描述，请参见 [数据类型](../../../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/3.basic-elements-1/2.data-type-comparison-rules/1.overview-of-data-type-comparison-rules.md)。
+  有关 SQL 数据类型的详细描述，请参见 [数据类型](../../../../4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/2.data-type-comparison-rules-of-oracle-mode/1.overview-of-data-type-comparison-rules-of-oracle-mode.md)。
   
 * 根据实际需求，创建合适类型的表，OceanBase 数据库当前支持非分区表和分区表。
