--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode.md
@@ -14,7 +14,7 @@ obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@tenant IDENTIFIED BY 
 
 语句使用说明：
 
-* 执行该语句的用户需要具备 `CREATE DATABASE LINK` 权限。为用户授权的相关操作请参见 [修改用户权限](../../6.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/2.oracle-3/5.modify-user-permissions-1.md)。
+* 执行该语句的用户需要具备 `CREATE DATABASE LINK` 权限。为用户授权的相关操作请参见 [修改用户权限](../../../2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。
 
 * `dblink_name`：DBLink 的名称，长度不超过 128 个字符。
 
@@ -76,7 +76,7 @@ obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@oracle IDENTIFIED BY 
 
 语句使用说明：
 
-* 执行该语句的用户需要具备 `CREATE DATABASE LINK` 权限。为用户授权的相关操作请参见 [修改用户权限](../../6.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/2.oracle-3/5.modify-user-permissions-1.md)。
+* 执行该语句的用户需要具备 `CREATE DATABASE LINK` 权限。为用户授权的相关操作请参见 [修改用户权限](../../2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。
 
 * `dblink_name`：DBLink 的名称，长度不超过 128 个字符。
 
@@ -151,7 +151,7 @@ select_expr_list:
   obclient> SELECT * FROM tbl1@my_link;
   ```
 
-更多 DBLink 相关的查询语句，请参见 [SIMPLE SELECT](../../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/5.SELECT-1/1.simple-select.md)。
+更多 DBLink 相关的查询语句，请参见 [SIMPLE SELECT](../../../4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)。
 
 ## 删除 DBLink
 
@@ -163,7 +163,7 @@ obclient> DROP DATABASE LINK dblink_name;
 
 语句使用说明：
 
-* 执行该语句的用户需要具备 `DROP DATABASE LINK` 权限。为用户授权的相关操作请参见 [修改用户权限](../../6.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/2.oracle-3/5.modify-user-permissions-1.md)。
+* 执行该语句的用户需要具备 `DROP DATABASE LINK` 权限。为用户授权的相关操作请参见 [修改用户权限](../../2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。
 
 * `dblink_name` 表示待删除的 DBLink 的名称。
 
