--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/3.modify-a-database-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/3.modify-a-database-of-mysql-mode.md
@@ -18,4 +18,4 @@ obclient> ALTER DATABASE test2 DEFAULT COLLATE UTF8MB4_BIN;
 obclient> ALTER DATABASE test2 READ WRITE;
 ```
 
-更多 `ALTER DATABASE` 语句相关的语法说明请参见 [ALTER DATABASE](../../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/3.alter-database.md)。
+更多 `ALTER DATABASE` 语句相关的语法说明请参见 [ALTER DATABASE](../../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/3.alter-database-of-mysql-mode.md)。
