--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/4.delete-a-database-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/4.delete-a-database-of-mysql-mode.md
@@ -6,7 +6,7 @@
 
 您可以使用 `DROP DATABASE` 语句删除 MySQL 模式下租户的数据库。
 
-如果误删数据库，可以通过回收站功能进行恢复，前提是需要开启回收站功能，相关操作请参见 [数据库、表和索引回收站](../../../10.high-data-availability/1.flashback/2.database-table-and-index-recycle-bin.md)。
+如果误删数据库，可以通过回收站功能进行恢复，前提是需要开启回收站功能，相关操作请参见 [数据库、表和索引回收站](../../../5.backup-and-recovery/1.flashback/2.database-table-and-index-recycle-bin.md)。
 
 示例如下：
 
@@ -14,4 +14,4 @@
 obclient> DROP DATABASE my_db;    
 ```
 
-更多 `DROP DATABASE` 语句相关的语法说明请参见 [DROP DATABASE](../../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/23.drop-database.md)。
+更多 `DROP DATABASE` 语句相关的语法说明请参见 [DROP DATABASE](../../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/23.drop-database-of-mysql-mode.md)。
