--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/8.delete-a-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/8.delete-a-table-of-mysql-mode.md
@@ -20,6 +20,6 @@ obclient> DROP TABLE IF EXISTS test;
 
 * 当租户关闭回收站功能时，`DROP TABLE` 操作表示删除表。
 
-* 当租户开启回收站功能时，`DROP TABLE` 操作表示删除的表会进入回收站。对于回收站中的表，后续您可以通过回收站功能进一步删除或恢复该表，回收站相关操作请参见 [数据库、表和索引回收站](../../../10.high-data-availability/1.flashback/2.database-table-and-index-recycle-bin.md)。
+* 当租户开启回收站功能时，`DROP TABLE` 操作表示删除的表会进入回收站。对于回收站中的表，后续您可以通过回收站功能进一步删除或恢复该表，回收站相关操作请参见 [数据库、表和索引回收站](../../../5.backup-and-recovery/1.flashback/2.database-table-and-index-recycle-bin.md)。
 
 * 回收站开关由系统变量 `recyclebin` 控制，默认为关闭状态。
