--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/1.about-tables-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/1.about-tables-of-mysql-mode.md
@@ -8,6 +8,6 @@
 
 * 为表的每个列选择合适的 SQL 数据类型。
 
-  有关 SQL 数据类型的详细描述，请参见 [数据类型](../../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/1.basic-elements/1.data-type/1.data-type-overview.md)。
+  有关 SQL 数据类型的详细描述，请参见 [数据类型](../../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md)。
   
 * 根据实际需求，创建合适类型的表，OceanBase 数据库当前支持非分区表和分区表。
