--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/3.define-an-auto-increment-column-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/3.define-an-auto-increment-column-of-mysql-mode.md
@@ -12,7 +12,7 @@
 | auto_increment_increment  | Session 级变量，用于设置自增步长，取值范围为 \[1, 65535\]，默认值为 `1`。                    |
 | auto_increment_offset     | Session 级变量，用于确定 `AUTO_INCREMENT` 列值的起点，取值范围为 \[1, 65535\]，默认值为 `1`。 |
 
-系统变量的设置方法及说明请参见 [系统变量概述](../../../../7.reference/14.system-reference/2.system-variable-for-mysql/1.overview-of-system-variables-3.md)。
+系统变量的设置方法及说明请参见 [系统变量概述](../../../../5.system-reference/2.system-variable-of-mysql-mode/1.overview-of-system-variables-of-mysql-mode.md)。
 
 ## 创建自增列
 
@@ -162,7 +162,7 @@ obclient> ALTER TABLE table_name MODIFY column_name data_type AUTO_INCREMENT;
   >
   >修改为自增列时，可以同时修改该列的数据类型，但需要确保修改后的数据类型是允许自增的数据类型。
 
-  关于数据类型的更多介绍，请参见 [数据类型概述](../../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/1.basic-elements/1.data-type/1.data-type-overview.md)。
+  关于数据类型的更多介绍，请参见 [数据类型概述](../../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md)。
   
 示例：
 
