--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/6.change-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/6.change-table-of-mysql-mode.md
@@ -4,7 +4,7 @@
 
 ## 更改表的 Collation 和字符集
 
-创建表时，如果未明确定义表的 Collation 和字符集，则默认使用数据库的字符集和字符序，数据库的 Collation 和字符集的详细介绍信息请参见 [数据库级字符集和字符序](../../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/1.basic-elements/3.character-set-and-collation/4.specify-character-set-and-collation.md)。
+创建表时，如果未明确定义表的 Collation 和字符集，则默认使用数据库的字符集和字符序，数据库的 Collation 和字符集的详细介绍信息请参见 [数据库级字符集和字符序](../../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/4.specify-character-set-and-collation-of-mysql-mode.md)。
 
 表创建后，您可以修改表的 Collation 和字符集设置。 语句如下：
 
@@ -328,4 +328,4 @@ obclient> ALTER TABLE test RENAME TO t1;
 obclient> RENAME TABLE test TO t1;
 ```
 
-更多 `ALTER TABLE` 语句的介绍，请参见 [ALTER TABLE](../../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/6.alter-table.md)。
+更多 `ALTER TABLE` 语句的介绍，请参见 [ALTER TABLE](../../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/6.alter-table-of-mysql-mode.md)。
