--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/6.change-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/6.change-table-of-mysql-mode.md
@@ -201,7 +201,7 @@ OceanBase 数据库支持新增列、修改列及其属性、删除列等。
   obclient> ALTER TABLE tbl1 MODIFY COLUMN c2 varchar(32) COLLATE utf8mb4_bin;
   ```
 
-  OceanBase 数据库中，列的 Collation 和字符集的详细介绍信息请参见 [列级字符集和字符序](../../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/1.basic-elements/3.character-set-and-collation/6.column-level-character-sets-and-collations.md)。
+  OceanBase 数据库中，列的 Collation 和字符集的详细介绍信息请参见 [列级字符集和字符序](../../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/6.column-level-character-set-and-collations-of-mysql-mode.md)。
   
 * 删除列，支持删除表中的普通列和含索引的列，但不允许删除主键列。
 
