--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/2.alter-system/10.FAILOVER.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/2.alter-system/10.FAILOVER.md
@@ -47,7 +47,7 @@
 
      执行 Failover 后，默认集群会进入最大性能模式，并且原主集群与其他备集群处于 `DISABLED` 状态。
 
-     有关将原主集群切换为备集群接入的示例，请参见 [CONVERT](../2.alter-system/7.CONVERT-1.md)。
+     有关将原主集群切换为备集群接入的示例，请参见 [CONVERT](../2.alter-system/7.convert.md)。
 
      ```sql
      obclient> ALTER SYSTEM FAILOVER TO 'obtest' CLUSTER_ID=2;
