--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/4.literal-of-mysql-mode/1.literal-overview-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/4.literal-of-mysql-mode/1.literal-overview-of-mysql-mode.md
@@ -6,14 +6,14 @@
 
 OceanBase 数据库支持如下字面量：
 
-* [字符串文本](../4.literal/2.string-literal.md)
+* [字符串文本](2.string-literal-of-mysql-mode.md)
 
-* [数值](../4.literal/3.numeric-value-1.md)
+* [数值](3.numeric-value-of-mysql-mode.md)
 
-* [日期时间值](../4.literal/4.date-and-time.md)
+* [日期时间值](4.date-and-time-of-mysql-mode.md)
 
-* [位值](../4.literal/5.hexadecimal-numeric.md)
+* [位值](5.hexadecimal-numeric-of-mysql-mode.md)
 
-* [布尔值](../4.literal/6.boolean.md)
+* [布尔值](6.boolean-of-mysql-mode.md)
 
-* [NULL 值](../4.literal/7.null-value.md)
+* [NULL 值](7.null-value-of-mysql-mode.md)
