--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/2.data-type-comparison-rules-of-oracle-mode/1.overview-of-data-type-comparison-rules-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/2.data-type-comparison-rules-of-oracle-mode/1.overview-of-data-type-comparison-rules-of-oracle-mode.md
@@ -4,16 +4,16 @@
 
 OceanBase 数据库支持如下数据类型比较规则：
 
-* [数值比较规则](../2.data-type-comparison-rules/2.numeric-value.md)
+* [数值比较规则](2.numeric-value-of-oracle-mode.md)
 
-* [日期值比较规则](../2.data-type-comparison-rules/3.date-value.md)
+* [日期值比较规则](3.date-value-of-oracle-mode.md)
 
-* [字符值比较规则](../2.data-type-comparison-rules/4.character-value.md)
+* [字符值比较规则](4.character-value-of-oracle-mode.md)
 
 有关数据类型比较规则的更多信息，请参见如下小节：
 
-* [数据类型优先级](../2.data-type-comparison-rules/5.data-type-priority.md)
+* [数据类型优先级](5.data-type-priority-of-oracle-mode.md)
 
-* [数据类型转换](../2.data-type-comparison-rules/6.data-type-conversion.md)
+* [数据类型转换](6.data-type-conversion-of-oracle-mode.md)
 
-* [数据转换的安全注意事项](../2.data-type-comparison-rules/7.security-considerations-for-data-conversion.md)
+* [数据转换的安全注意事项](7.security-considerations-for-data-conversion-of-oracle-mode.md)
