--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/2.data-type-comparison-rules-of-oracle-mode/2.numeric-value-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/2.data-type-comparison-rules-of-oracle-mode/2.numeric-value-of-oracle-mode.md
@@ -10,4 +10,4 @@ OceanBase 数据库的数值数据比较规则如下：
 
 * 正数均大于零。例如： `20 > 0；100 > 1`。
 
-有关数值数据比较规则的更多信息，请参见 [数值类型的优先级](../1.built-in-data-types/3.numeric-data-type/5.numeric-priority.md)。
+有关数值数据比较规则的更多信息，请参见 [数值类型的优先级](../1.built-in-data-types-of-oracle-mode/3.numeric-data-type-of-oracle-mode/5.numeric-priority-of-oracle-mode.md)。
