--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/3.literal-of-oracle-mode/1.literal-overview-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/3.literal-of-oracle-mode/1.literal-overview-of-oracle-mode.md
@@ -4,12 +4,12 @@
 
 OceanBase 数据库支持以下字面量：
 
-* [文本字面量](../3.literal-1/2.literal-value-of-text.md)
+* [文本字面量](../3.literal-of-oracle-mode/2.literal-value-of-text-of-oracle-mode.md)
 
-* [数值字面量](../3.literal-1/3.numeric-literal.md)
+* [数值字面量](../3.literal-of-oracle-mode/3.numeric-literal-of-oracle-mode.md)
 
-* [日期字面量](4.date-and-time-literal/1.date-literal.md)
+* [日期字面量](4.date-and-time-literal-of-oracle-mode/1.date-literal-of-oracle-mode.md)
 
-* [时间戳字面量](4.date-and-time-literal/2.timestamp-literal.md)
+* [时间戳字面量](4.date-and-time-literal-of-oracle-mode/2.timestamp-literal-of-oracle-mode.md)
 
-* [间隔字面量](../3.literal-1/5.interval-literal.md)
+* [间隔字面量](../3.literal-of-oracle-mode/5.interval-literal-of-oracle-mode.md)
