--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/4.format-of-oracle-mode/1.formatting-overview-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/4.format-of-oracle-mode/1.formatting-overview-of-oracle-mode.md
@@ -12,9 +12,9 @@
 
 OceanBase 数据库支持以下两种数据格式模型：
 
-* [数字格式模型](../4.format/2.format-1.md)
+* [数字格式模型](../4.format-of-oracle-mode/2.format-of-oracle-mode.md)
 
-* [日期时间格式模型](../4.format/3.date-and-time-formatting.md)
+* [日期时间格式模型](../4.format-of-oracle-mode/3.date-and-time-formatting-of-oracle-mode.md)
 
 >**说明**
 >
