--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/4.operator-of-oracle-mode/2.operator-precedence-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/4.operator-of-oracle-mode/2.operator-precedence-of-oracle-mode.md
@@ -11,7 +11,7 @@
 | +、-（作为一元运算符）、PRIOR、CONNECT_BY_ROOT | 正号、负号、层次结构中的位置。                                                  |
 | \*、/                               | 乘法、除法。                                                           |
 | +、-（作为二元运算符）、\|\|                  | 加、减、串联。                                                          |
-| 条件表达式在数据库评估完运算符后再进行评估              | 详情请参见文档 [SQL 条件概述](../7.condition/1.overview-of-sql-conditions.md)。 |
+| 条件表达式在数据库评估完运算符后再进行评估              | 详情请参见文档 [SQL 条件概述](../7.condition-of-oracle-mode/1.overview-of-sql-conditions-of-oracle-mode.md)。 |
 
 您也可以在表达式中使用括号来限制运算符优先级。OceanBase 数据库将先对括号内的表达式求值，再对括号外部的表达式求值。
 
