--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/6.expression-of-oracle-mode/1.sql-expressions-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/6.expression-of-oracle-mode/1.sql-expressions-of-oracle-mode.md
@@ -38,24 +38,24 @@ SET last_name = INITCAP(last_name);
 
 OceanBase 数据库当前版本支持如下表达式类型：
 
-* [简单表达式](../6.expression-1/2.simple-expression.md)
+* [简单表达式](2.simple-expression-of-oracle-mode.md)
 
-* [复合表达式](../6.expression-1/3.compound-expression.md)
+* [复合表达式](3.compound-expression-of-oracle-mode.md)
 
-* [条件表达式](../6.expression-1/4.conditional-expressions.md)
+* [条件表达式](4.conditional-expressions-of-oracle-mode.md)
 
-* [列表达式](../6.expression-1/5.column-expression.md)
+* [列表达式](5.column-expression-of-oracle-mode.md)
 
-* [CURSOR 表达式](../6.expression-1/6.cursor-expression.md)
+* [CURSOR 表达式](6.cursor-expression-of-oracle-mode.md)
 
-* [日期时间表达式](../6.expression-1/7.date-and-time-expressions.md)
+* [日期时间表达式](7.date-and-time-expressions-of-oracle-mode.md)
 
-* [函数表达式](../6.expression-1/8.function-expression.md)
+* [函数表达式](8.function-expression-of-oracle-mode.md)
 
-* [间隔表达式](../6.expression-1/9.interval-expression.md)
+* [间隔表达式](9.interval-expression-of-oracle-mode.md)
 
-* [标量子查询表达式](../6.expression-1/10.scalar-subquery-expression.md)
+* [标量子查询表达式](10.scalar-subquery-expression-of-oracle-mode.md)
 
-* [类型构造函数表达式](../6.expression-1/11.type-constructor-expression.md)
+* [类型构造函数表达式](11.type-constructor-expression-of-oracle-mode.md)
 
-* [表达式列表](../6.expression-1/12.expression-list.md)
+* [表达式列表](12.expression-list-of-oracle-mode.md)
