--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/7.condition-of-oracle-mode/1.overview-of-sql-conditions-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/7.condition-of-oracle-mode/1.overview-of-sql-conditions-of-oracle-mode.md
@@ -49,20 +49,20 @@ comm_pct IS NULL AND salary = 10000
 
 OceanBase 数据库当前版本支持如下条件类型：
 
-* [比较条件](../7.condition/3.comparison-conditions.md)
+* [比较条件](../7.condition-of-oracle-mode/3.comparison-conditions-of-oracle-mode.md)
 
-* [浮点条件](../7.condition/4.floating-point-conditions.md)
+* [浮点条件](../7.condition-of-oracle-mode/4.floating-point-conditions-of-oracle-mode.md)
 
-* [逻辑条件](../7.condition/5.logical-conditions.md)
+* [逻辑条件](../7.condition-of-oracle-mode/5.logical-conditions-of-oracle-mode.md)
 
-* [模式匹配条件](../7.condition/6.pattern-matching-conditions.md)
+* [模式匹配条件](../7.condition-of-oracle-mode/6.pattern-matching-conditions-of-oracle-mode.md)
 
-* [空条件](../7.condition/7.empty-condition.md)
+* [空条件](../7.condition-of-oracle-mode/7.empty-condition-of-oracle-mode.md)
 
-* [复合条件](../7.condition/8.composite-condition.md)
+* [复合条件](../7.condition-of-oracle-mode/8.composite-condition-of-oracle-mode.md)
 
-* [BETWEEN 条件](../7.condition/9.between-condition.md)
+* [BETWEEN 条件](../7.condition-of-oracle-mode/9.between-condition-of-oracle-mode.md)
 
-* [EXISTS 条件](../7.condition/10.existence-condition.md)
+* [EXISTS 条件](../7.condition-of-oracle-mode/10.existence-condition-of-oracle-mode.md)
 
-* [IN 条件](../7.condition/11.in-conditions.md)
+* [IN 条件](../7.condition-of-oracle-mode/11.in-conditions-of-oracle-mode.md)
