--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/7.condition-of-oracle-mode/8.composite-condition-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/7.condition-of-oracle-mode/8.composite-condition-of-oracle-mode.md
@@ -8,4 +8,4 @@
 { (condition) | NOT condition | condition { AND | OR } condition }
 ```
 
-关于条件 `NOT`、`AND` 和 `OR` 条件的详细信息，请参见 [逻辑条件](../7.condition/5.logical-conditions.md)。
+关于条件 `NOT`、`AND` 和 `OR` 条件的详细信息，请参见 [逻辑条件](../7.condition-of-oracle-mode/5.logical-conditions-of-oracle-mode.md)。
