--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/13.set-password-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/13.set-password-of-oracle-mode.md
@@ -4,7 +4,7 @@
 
 该语句用于修改 OceanBase 数据库当前登录用户或其他用户的密码。
 
-有关其它修改用户密码的方式，请参见 [ALTER USER](../1.DDL-1/12.alter-user-1.md)。
+有关其它修改用户密码的方式，请参见 [ALTER USER](../1.ddl-of-oracle-mode/12.alter-user-of-oracle-mode.md)。
 
 ## 语法
 
