--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/3.declare-handler-mysql.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/3.declare-handler-mysql.md
@@ -28,7 +28,7 @@ condition_value: {
 ```
 
 
-`statement` 可以是简单的语句，例如 `SET var_name = 1`，也可以是使用 `BEGIN ... END` 块编写的复合语句。详细信息请参见 [PL 语法结构](../1.basic-syntax.md)。
+`statement` 可以是简单的语句，例如 `SET var_name = 1`，也可以是使用 `BEGIN ... END` 块编写的复合语句。详细信息请参见 [PL 语法结构](../1.basic-syntax-mysql.md)。
 
 `handler_action` 指示处理程序在执行处理程序语句后采取的操作，详情如下：
 
