--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/2.data-type-oracle/2.sql-data-type-oracle.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/2.data-type-oracle/2.sql-data-type-oracle.md
@@ -10,7 +10,7 @@ SQL 支持的数据类型可以在 PL 中直接使用，只是个别变量的长
 
 >**说明**
 >
->关于 SQL 数据类型的详细信息，请参见 [内建数据类型](../../6.sql-syntax/3.common-tenant-oracle-mode/3.basic-elements-1/1.built-in-data-types/1.overview-of-built-in-data-types.md)。
+>关于 SQL 数据类型的详细信息，请参见 [内建数据类型](../../../1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md)。
 
 下表列出了 PL 和 SQL 中最大长度不同的的数据类型：
 
