--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/4.collections-and-records-oracle/7.collection-methods-oracle/4.extend-method-oracle.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/4.collections-and-records-oracle/7.collection-methods-oracle/4.extend-method-oracle.md
@@ -7,7 +7,7 @@ EXTEND 方法
 >
 >该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。
 
-集合可以为空，但不能为 Null。使用构造函数可以使集合为空或将元素添加到 Null 集合。有关更多信息，请参见 [集合构造函数](../6.collection-constructor.md)。
+集合可以为空，但不能为 Null。使用构造函数可以使集合为空或将元素添加到 Null 集合。有关更多信息，请参见 [集合构造函数](../6.collection-constructor-oracle.md)。
 
 `EXTEND` 方法的使用说明如下：
 
