--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/7.stored-procedure-and-functions-oracle/6.pipeline-function-oracle/2.create-a-pipeline-function-oracle.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/7.stored-procedure-and-functions-oracle/6.pipeline-function-oracle/2.create-a-pipeline-function-oracle.md
@@ -10,7 +10,7 @@
 主要语法 
 -------------------------
 
-管道函数主要语法如下，有关完整的函数创建语法，请参见 [CREATE FUNCTION](../../12.ddl-operations-on-stored-pl-units/7.create-function.md)。
+管道函数主要语法如下，有关完整的函数创建语法，请参见 [CREATE FUNCTION](../../11.ddl-operations-on-stored-pl-units-oracle/7.create-function-oracle.md)。
 `pipelined_clause` 语法如下：
 
 ```sql
@@ -71,7 +71,7 @@ RETURN [ expression ] ;
 
   
 
-* 通常，管道函数具有一个或多个游标变量参数。有关游标变量的信息，请参见 [游标变量](../../6.pl-static-sql/2.cursor/5.cursor-variable.md)。
+* 通常，管道函数具有一个或多个游标变量参数。有关游标变量的信息，请参见 [游标变量](../../5.pl-static-sql-oracle/2.cursor-oracle/5.cursor-variable-oracle.md)。
 
   
 
