--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/2.expression-of-mysql-mode/2.expression-syntax-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/2.expression-of-mysql-mode/2.expression-syntax-of-mysql-mode.md
@@ -103,4 +103,4 @@ simple_expr collation
 ;
 ```
 
-有关运算符优先级，请参见 [运算符优先级](../../2.operator/2.operator-precedence.md)。
+有关运算符优先级，请参见 [运算符优先级](../../2.operator-of-mysql-mode/2.operator-precedence-of-mysql-mode.md)。
