--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/2.operator-of-mysql-mode/1.operator-overview-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/2.operator-of-mysql-mode/1.operator-overview-of-mysql-mode.md
@@ -27,14 +27,14 @@
 
 OceanBase 数据库目前支持如下运算符：
 
-* [算术运算符](../2.operator/3.arithmetic-operators.md)
+* [算术运算符](../2.operator-of-mysql-mode/3.arithmetic-operators-of-mysql-mode.md)
 
-* [位运算符](../2.operator/4.bitwise-operators.md)
+* [位运算符](../2.operator-of-mysql-mode/4.bitwise-operators-of-mysql-mode.md)
 
-* [比较运算符](../2.operator/5.comparison-operators.md)
+* [比较运算符](../2.operator-of-mysql-mode/5.comparison-operators-of-mysql-mode.md)
 
-* [逻辑运算符](../2.operator/6.logical-operators.md)
+* [逻辑运算符](../2.operator-of-mysql-mode/6.logical-operators-of-mysql-mode.md)
 
-* [日期时间运算符](../2.operator/8.date-and-time-operators.md)
+* [日期时间运算符](../2.operator-of-mysql-mode/8.date-and-time-operators-of-mysql-mode.md)
 
-* [字符连接运算符](../2.operator/9.character-concatenation-operators.md)
+* [字符连接运算符](../2.operator-of-mysql-mode/9.character-concatenation-operators-of-mysql-mode.md)
