--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/5.encryption-and-compression-functions-of-mysql-mode/6.uncompressed-length-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/5.encryption-and-compression-functions-of-mysql-mode/6.uncompressed-length-of-mysql-mode.md
@@ -8,7 +8,7 @@ UNCOMPRESSED_LENGTH(str)
 
 ## 说明
 
-返回压缩字符串在 [COMPRESS()](5.COMPRESS.md) 函数压缩前的长度。
+返回压缩字符串在 [COMPRESS()](4.compress-of-mysql-mode.md) 函数压缩前的长度。
 
 ## 示例
 
