--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/2.pseudo-column-of-oracle-mode/1.overview-of-pseudo-columns-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/2.pseudo-column-of-oracle-mode/1.overview-of-pseudo-columns-of-oracle-mode.md
@@ -4,12 +4,12 @@
 
 OceanBase 数据库当前版本支持如下伪列类型：
 
-* [层次查询伪列](../2.pseudo-column-1/2.hierarchical-query-pseudo-columns.md)
+* [层次查询伪列](../2.pseudo-column-of-oracle-mode/2.hierarchical-query-pseudo-columns-of-oracle-mode.md)
 
-* [序列伪列](../2.pseudo-column-1/3.sequence-pseudo-column.md)
+* [序列伪列](../2.pseudo-column-of-oracle-mode/3.sequence-pseudo-column-of-oracle-mode.md)
 
-* [ORA_ROWSCN 伪列](../2.pseudo-column-1/4.ora_rowscn-pseudo-column.md)
+* [ORA_ROWSCN 伪列](../2.pseudo-column-of-oracle-mode/4.ora_rowscn-pseudo-column-of-oracle-mode.md)
 
-* [ROWNUM 伪列](../2.pseudo-column-1/5.rownum-pseudo-column.md)
+* [ROWNUM 伪列](../2.pseudo-column-of-oracle-mode/5.rownum-pseudo-column-of-oracle-mode.md)
 
-* [ROWID 伪列](../2.pseudo-column-1/6.rowid-pseudo-column.md)
+* [ROWID 伪列](../2.pseudo-column-of-oracle-mode/6.rowid-pseudo-column-of-oracle-mode.md)
