--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/4.operator-of-oracle-mode/1.operator-overview-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/4.operator-of-oracle-mode/1.operator-overview-of-oracle-mode.md
@@ -29,12 +29,12 @@
 
 本章主要介绍非逻辑（非布尔）运算符，这些运算符本身不能用作查询或子查询的 `WHERE` 或 `HAVING` 条件。OceanBase 数据库目前支持如下运算符：
 
-* [算术运算符](../4.operator-1/3.arithmetic-operators-1.md)
+* [算术运算符](../4.operator-of-oracle-mode/3.arithmetic-operators-of-oracle-mode.md)
 
-* [串联运算符](../4.operator-1/4.concatenate-operators.md)
+* [串联运算符](../4.operator-of-oracle-mode/4.concatenate-operators-of-oracle-mode.md)
 
-* [层次查询运算符](../4.operator-1/5.hierarchical-query-operators-1.md)
+* [层次查询运算符](../4.operator-of-oracle-mode/5.hierarchical-query-operators-of-oracle-mode.md)
 
-* [集合运算符](../4.operator-1/6.set-operators.md)
+* [集合运算符](../4.operator-of-oracle-mode/6.set-operators-of-oracle-mode.md)
 
-* [COLLATE 运算符](../4.operator-1/7.collation-1.md)
+* [COLLATE 运算符](../4.operator-of-oracle-mode/7.collation-of-oracle-mode.md)
