--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/4.operator-of-oracle-mode/5.hierarchical-query-operators-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/4.operator-of-oracle-mode/5.hierarchical-query-operators-of-oracle-mode.md
@@ -16,4 +16,4 @@
 >
 >您不能在 `START WITH` 条件或 `CONNECT BY` 条件中指定此运算符。
 
-有关层次查询的详细信息，请参见 [层次查询](../8.queries-and-subqueries-1/3.hierarchical-query.md)。
+有关层次查询的详细信息，请参见 [层次查询](../8.queries-and-subqueries-of-oracle-mode/3.hierarchical-query-of-oracle-mode.md)。
