--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/7.condition-of-oracle-mode/7.empty-condition-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/7.condition-of-oracle-mode/7.empty-condition-of-oracle-mode.md
@@ -10,7 +10,7 @@
 expr IS [ NOT ] NULL
 ```
 
-有关空值的详细信息，请参见 [空值](../3.basic-elements-1/5.null/1.empty-value-overview.md)。
+有关空值的详细信息，请参见 [空值](../3.basic-elements-of-oracle-mode/5.null-of-oracle-mode/1.empty-value-overview-of-oracle-mode.md)。
 
 ## 示例
 
