--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/8.queries-and-subqueries-of-oracle-mode/2.simple-query-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/8.queries-and-subqueries-of-oracle-mode/2.simple-query-of-oracle-mode.md
@@ -12,7 +12,7 @@
 SELECT 列名1,列名2,列名3,... FROM 表;
 ```
 
-其中表名、字段名和关键字 `SELECT` 和 `FROM` 不区分大小写。查询的最后可以跟上分号（;），多条 SQL 可以同时执行。您可以在 `SELECT` 语句中使用注释将指令或 Hint 传递给 OceanBase 数据库优化器。优化器使用 Hint 为语句选择执行计划。有关 Hint 的更多信息，请参见 [Hint](../3.basic-elements-1/6.annotation-1/4.Hint/1.hint-overview.md)。
+其中表名、字段名和关键字 `SELECT` 和 `FROM` 不区分大小写。查询的最后可以跟上分号（;），多条 SQL 可以同时执行。您可以在 `SELECT` 语句中使用注释将指令或 Hint 传递给 OceanBase 数据库优化器。优化器使用 Hint 为语句选择执行计划。有关 Hint 的更多信息，请参见 [Hint](../3.basic-elements-of-oracle-mode/6.annotation-of-oracle-mode/4.hint-of-oracle-mode/1.hint-overview-of-oracle-mode.md)。
 
 ## 示例
 
