--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/29.drop-context-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/29.drop-context-of-oracle-mode.md
@@ -20,7 +20,7 @@ DROP CONTEXT namespace;
 
 `namespace` 是指定要删除的上下文命名空间的名称。您不能删除内置的命名空间 `USERENV`。
 
-有关 `USERENV` 命名空间的信息，请参见函数 [SYS_CONTEXT](../../5.functions-2/2.single-row-functions/9.environment-and-identifier-functions/1.LNNVL-1-2.md)。
+有关 `USERENV` 命名空间的信息，请参见函数 [SYS_CONTEXT](../../5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/9.environment-and-identifier-functions-of-oracle-mode/1.lnnvl-of-oracle-mode.md)。
 
 ## 示例
 
