--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/7.stored-procedure-and-functions-oracle/6.pipeline-function-oracle/3.related-applications-oracle.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/7.stored-procedure-and-functions-oracle/6.pipeline-function-oracle/3.related-applications-oracle.md
@@ -27,4 +27,4 @@
 对管道函数结果的 DML 操作 
 ------------------------------------
 
-管道函数返回的"表"不能是 `DELETE`、`INSERT`、`UPDATE` 或 `MERGE` 语句的目标表。 但是，您可以创建此类表的视图并在视图上创建 `INSTEAD OF` 触发器。关于 `INSTEAD OF` 触发器的详细信息，请参见 [CREATE TRIGGER](../../12.ddl-operations-on-stored-pl-units/11.create-trigger.md)。
+管道函数返回的"表"不能是 `DELETE`、`INSERT`、`UPDATE` 或 `MERGE` 语句的目标表。 但是，您可以创建此类表的视图并在视图上创建 `INSTEAD OF` 触发器。关于 `INSTEAD OF` 触发器的详细信息，请参见 [CREATE TRIGGER](../../11.ddl-operations-on-stored-pl-units-oracle/11.create-trigger-oracle.md)。
