--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/4.pl-system-package/1.system-package-overview.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/4.pl-system-package/1.system-package-overview.md
@@ -58,12 +58,12 @@ PL 系统包概览
 | [DBMS_PLAN_CACHE](12.DBMS_PLAN_CACHE/1.dbms_plan_cache-overview.md)       | 从 Plan Cache 中移除指定 SQL。                       |支持|不支持|
 | [DBMS_RANDOM](13.DBMS_RANDOM/1.dbms_random-overview.md)           | 提供内置的随机数生成器。                                  |支持|不支持|
 | [DBMS_RESOURCE_MANAGER](14.DBMS_RESOURCE_MANAGER/1.dbms_resource_manager-overview.md)| 用于维护资源使用计划，资源使用组和资源计划指令。|支持|支持|
-| [DBMS_SCHEDULER](1.dbms_scheduler-overview.md)|用于管理定时任务。|支持|不支持|
-| [DBMS_SESSION](16.DBMS_SESSION/1.overview-3.md)          | 提供通过存储过程访问 SQL `ALTER SESSION` 语句和其他会话信息。     |支持|不支持|
+| [DBMS_SCHEDULER](15.DBMS_SCHEDULER/1.dbms_scheduler-overview.md)|用于管理定时任务。|支持|不支持|
+| [DBMS_SESSION](16.DBMS_SESSION/1.dbms_session_overview.md)          | 提供通过存储过程访问 SQL `ALTER SESSION` 语句和其他会话信息。     |支持|不支持|
 | [DBMS_SQL](17.DBMS_SQL/1.dbms_sql-overview.md)              | 使用动态 SQL 访问数据库。                               |支持|不支持|
 | [DBMS_STATS](18.DBMS_STATS/1.dbms_stats-overview.md)            | 查看和修改优化器为数据库对象收集的统计信息。                        |支持|支持|
 | [DBMS_UTILITY](19.DBMS_UTILITY/1.dbms_utility-overview.md)   | 提供各种实用子程序。|支持|不支持|
-| [DBMS_XA](20.DBMS_XA/1.dbms_xa-overview-1.md)               | 包含 XA/Open 接口，以供应用程序在 PL 中调用 XA 接口。           |支持|不支持|
+| [DBMS_XA](20.DBMS_XA/1.dbms_xa-overview.md)               | 包含 XA/Open 接口，以供应用程序在 PL 中调用 XA 接口。           |支持|不支持|
 | [DBMS_XMLGEN](21.DBMS_XMLGEN/1.dbms_xmlgen-system-package-overview.md)| 包含 XA/Open 接口，以供应用程序在 PL 中调用 XA 接口。    |支持|不支持|
 | [ODCIConst](22.ODCICONST/1.odciconst-overview.md)             | 定义适用于 PL 的常量。                                 |支持|不支持|
 | [UTL_FILE](23.UTL_FILE/1.utl_file-overview.md)              | 使 PL 程序能够读写操作系统文本文件并提供标准操作系统流文件 I/O 的受限版本。    |支持|不支持|
